Antes del Report Builder

--- a/MainApp/Translations/Cursos.g.xlf
+++ b/MainApp/Translations/Cursos.g.xlf
@@ -513,6 +513,46 @@
           <note from="Developer" annotates="general" priority="2">ESP="Especifica el código de serie que quieres asignar a los cursos"</note>
           <note from="Xliff Generator" annotates="general" priority="3">Page IUSUP Courses Setup - Control Course Nos. - Property ToolTip</note>
         </trans-unit>
+        <trans-unit id="Report 3425968629 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Information</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Información del curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Course Information - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 3425968629 - RequestPage 2516438534 - Property 1064389655" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Teaching tip title</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Course Information - RequestPage RequestOptionsPage - Property AboutTitle</note>
+        </trans-unit>
+        <trans-unit id="Report 3425968629 - RequestPage 2516438534 - Property 247559172" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Teaching tip content</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Course Information - RequestPage RequestOptionsPage - Property AboutText</note>
+        </trans-unit>
+        <trans-unit id="Report 3425968629 - Control 2346885236 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Options</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Opciones"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Course Information - Control Options - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 643572706 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Update Course Price</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Actualizar precio curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Update Cuourse Price - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 643572706 - Control 4105281732 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Options</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Opciones"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Update Cuourse Price - Control GroupName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 643572706 - Control 1158296446 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Porcentaje de aumento del precio</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Update Cuourse Price - Control PercentajeControl - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="Report 643572706 - Control 1158296446 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Percentaje</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Porcentaje"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report IUSUP Update Cuourse Price - Control PercentajeControl - Property Caption</note>
+        </trans-unit>
         <trans-unit id="TableExtension 783951191 - Field 3690995997 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2079186865">
           <source>Course Edition</source>
           <note from="Developer" annotates="general" priority="2">Edición de Curso</note>
